--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -1,6 +1,7 @@
 /* Configuração gerais do body da página. */
 body {
     background-image: url(../media/img/bg.png);
+    background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Nunito', sans-serif;
