--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 /* Configuração gerais do body da página. */
 body {
     background-image: url(../media/img/bg.png);
+    background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -43,6 +44,7 @@ main {
     text-align: center;
     width: 375px;
 }
+
 /* Configuração de estilização da section #jogar. */
 #jogar {
     display: flex;
@@ -147,4 +149,50 @@ main {
     -moz-box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.54);
     box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.54);
     animation: none;
+}
+
+@media screen and (max-width: 768px) {
+
+    main {
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 0 0 0;
+        gap: 25px;
+        border-radius: 0;
+    }
+
+    #logos {
+        width: 100%;
+        flex-direction: column;
+        gap: 30px;
+        justify-content: center;
+    }
+
+    #logo-mario {
+        width: 320px;
+        height: 185px;
+    }
+
+    #logos p {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 28px;
+        line-height: 28px;
+        text-align: center;
+        width: 310px;
+    }
+
+    #jogar {
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .login_form {
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+    }
 }
