--- a/src/css/style.css
+++ b/src/css/style.css
@@ -151,48 +151,46 @@ main {
     animation: none;
 }
 
+
 @media screen and (max-width: 768px) {
 
     main {
-        width: 100%;
-        height: 100%;
         flex-direction: column;
         justify-content: center;
-        padding: 0 0 0 0;
+        align-items: center;
+        width: 100%;
         gap: 25px;
-        border-radius: 0;
     }
 
     #logos {
         width: 100%;
         flex-direction: column;
         gap: 30px;
-        justify-content: center;
     }
 
     #logo-mario {
-        width: 320px;
-        height: 185px;
+        width: 250px;
+        height: 150px;
     }
 
     #logos p {
         font-style: normal;
         font-weight: 700;
-        font-size: 28px;
-        line-height: 28px;
+        font-size: 22px;
+        line-height: 26px;
         text-align: center;
-        width: 310px;
+        width: 200px;
     }
 
     #jogar {
-        width: 100%;
         flex-direction: column;
-        justify-content: center;
+        width: 100%;
+        
     }
 
     .login_form {
         flex-direction: column;
+        font-size: 22px;
         width: 100%;
-        padding: 0;
     }
 }
