--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -176,7 +176,7 @@ header button:hover {
         flex-direction: column;
         width: 100%;
         height: 100%;
-        margin: -60px 0 0px 0;
+        margin: -78px 0 0px 0;
     }
 
     header div {
@@ -197,8 +197,7 @@ header button:hover {
     }
 
     header button {
-        margin-top: -68px;
-        margin-bottom: 10px;
+        margin-top: -75px;
         margin-left: 80px;
         height: 50px;
     }
@@ -212,7 +211,7 @@ header button:hover {
         width: fit-content;
         height: fit-content;
         gap: 0.7em;
-        padding: 1em 1em 1em 1em;
-        margin: 0 2.5em 0 2.5em; 
+        padding: 0.8em 0.8em 0.8em 0.8em;
+        margin: 0 2.5em 1.2em 2.5em; 
      }
 }
