--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,7 +157,8 @@ main {
     body {
         flex-direction: column;
         width: 100%;
-        height: fit-content;
+        height: 100%;
+        justify-content: center;
     }
 
     main {
@@ -165,9 +166,9 @@ main {
         flex-direction: column;
         width: fit-content;
         height: fit-content;
-        margin-top: 40px;
-        margin-bottom: 40px;
-        padding: 0.9em 0.9em 0.9em 0.9em;
+        margin-top: 18px;
+        margin-bottom: 18px;
+        padding: 1em 0.9em 1em 0.9em;
         gap: 25px;
     }
 
