--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -218,14 +218,14 @@ main {
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: fit-content;
-        margin: 0 10px 0.8em 10px
+        height: 100%;
+        margin: 0 0 3px 0;
     }
 
     .grid {
         grid-template-columns: repeat(4, 3.3em);
         width: fit-content;
-        height: fit-content;
+        height: 100%;
         gap: 10px;
         padding: 0.7em 0.7em 0.7em 0.7em;
      }
