--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -219,14 +219,13 @@ main {
         align-items: center;
         width: 100%;
         height: 100%;
-        margin: 0 0 3px 0;
     }
 
     .grid {
-        grid-template-columns: repeat(4, 3.3em);
-        width: fit-content;
+        grid-template-columns: repeat(4, 55px);
+        width: 100%;
+        max-width: 330px;
         height: 100%;
-        gap: 10px;
-        padding: 0.7em 0.7em 0.7em 0.7em;
+        gap: 10px 22px;
      }
 }
