--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,7 +157,7 @@ main {
     body {
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         justify-content: center;
     }
 
@@ -166,8 +166,6 @@ main {
         flex-direction: column;
         width: fit-content;
         height: fit-content;
-        margin-top: 18px;
-        margin-bottom: 18px;
         padding: 1em 0.9em 1em 0.9em;
         gap: 25px;
     }
