--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -167,7 +167,7 @@ main {
 }
 
 /* Configuração de tela na horizontal para mobile */
-@media screen and (max-height: 400px) {
+@media screen and (max-width: 768px) and (max-height: 400px) {
     body {
         justify-content: center;
         align-items: center;
