--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,7 +152,7 @@ main {
 }
 
 /* Configuração de tela na horizontal para mobile */
-@media screen and (max-height: 400px) {
+@media screen and (max-width: 768px) and (max-height: 400px) {
     body {
         width: 100%;
         height: 100%;
