--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -167,7 +167,7 @@ main {
 }
 
 /* Configuração de tela na horizontal para mobile */
-@media screen and (max-width: 768px) and (max-height: 400px) {
+@media (max-height: 400px) and (orientation: landscape) {
     body {
         justify-content: center;
         align-items: center;
@@ -225,12 +225,12 @@ main {
         height: 100%;
         gap: 10px 15px;
         padding: 0.8em 0.1em 0.8em 0.1em;
-        perspective: 400px;
+        perspective: 300px;
      }
 }
 
 /* Configuração de tela na vertical para mobile */
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
 
     body {
         justify-content: center;
@@ -246,29 +246,27 @@ main {
         flex-direction: column;
         width: 100%;
         height: 100%;
-        margin: -78px 0 0px 0;
+        margin: -75px 0 0 0;
     }
 
     header div {
+        justify-content: center;
         background-position: center;
-        background-size: contain;
         width: 100%;
-        height: 230px;
+        height: 200px;
         letter-spacing: 1.5px;
     }
 
     header div p {
         width: 100%;
-        max-width: 200px;
-        align-items: center;
-        justify-content: center;
+        max-width: 150px;
         font-weight: 900;
-        font-size: 16.5px;
-        line-height: 20px;
+        font-size: 17px;
+        line-height: 22px;
     }
 
     header button {
-        margin-top: -75px;
+        margin-top: -30px;
         margin-left: 80px;
         height: 50px;
     }
@@ -291,6 +289,6 @@ main {
         max-width: 330px;
         height: 100%;
         gap: 10px 22px;
-        perspective: 400px;
+        perspective: 300px;
      }
 }
