--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,7 +152,7 @@ main {
 }
 
 /* Configuração de tela na horizontal para mobile */
-@media screen and (max-width: 768px) and (max-height: 400px) {
+@media (max-height: 400px) and (orientation: landscape) {
     body {
         width: 100%;
         height: 100%;
@@ -207,7 +207,66 @@ main {
 }
 
 /* Configuração de tela na vertical para mobile */
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) and (orientation: portrait) {
+
+    body {
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+    }
+
+    main {
+        border: 2px solid #fff;
+        flex-direction: column;
+        width: fit-content;
+        height: 100%;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        padding: 1em 0.9em 1em 0.9em;
+        gap: 25px;
+    }
+
+    #logos {
+        flex-direction: column;
+        width: 100%;
+        gap: 30px;
+    }
+
+    #logo-mario {
+        width: 300px;
+        height: 150px;
+    }
+
+    #logos p {
+        font-weight: 900;
+        font-size: 22px;
+        line-height: 26px;
+        width: 200px;
+    }
+
+    #jogar {
+        flex-direction: column;
+        width: 100%;
+        
+    }
+
+    .login_form {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #label {
+        font-size: 22px;
+    }
+
+    .login_button {
+        font-size: 32px;
+    }
+}
+
+/* Configuração de tela para desktop */
+@media screen and (max-width: 768px) and (orientation: portrait) {
 
     body {
         flex-direction: column;
