--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -187,6 +187,7 @@ main {
         background-position: center;
         background-size: contain;
         width: 100%;
+        max-width: 480px;
         height: 230px;
         letter-spacing: 1.5px;
     }
@@ -197,12 +198,12 @@ main {
         align-items: center;
         justify-content: center;
         font-weight: 900;
-        font-size: 16.5px;
+        font-size: 16px;
         line-height: 20px;
     }
 
     header button {
-        margin-left: 15px;
+        margin-left: 10px;
         height: 48px;
     }
 
