--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -226,7 +226,7 @@ main {
         height: 100%;
         gap: 10px 15px;
         padding: 0.8em 0.1em 0.8em 0.1em;
-        perspective: 0;
+        perspective: none;
      }
 }
 
@@ -290,6 +290,6 @@ main {
         max-width: 330px;
         height: 100%;
         gap: 10px 22px;
-        perspective: 0;
+        perspective: none;
      }
 }
