--- a/src/css/jogo.css
+++ b/src/css/jogo.css
@@ -226,6 +226,13 @@ main {
         height: 100%;
         gap: 10px 15px;
         padding: 0.8em 0.1em 0.8em 0.1em;
+     }
+     
+     .back:hover {
+        box-shadow: 0 0 5px yellow,
+        0 0 25px yellow, 0 0 50px yellowgreen,
+        0 0 100px #14ffe9, 0 0 150px #ffeb3b,
+        0 0 200px #ff00e0;
         animation: animated 1.5s linear infinite;
      }
      
@@ -299,6 +306,16 @@ main {
         max-width: 330px;
         height: 100%;
         gap: 10px 22px;
+        animation: animated 1.5s linear;
+     }
+     
+    .back:hover {
+
+        box-shadow: 0 0 5px yellow,
+
+        0 0 25px yellow, 0 0 50px yellowgreen,
+        0 0 100px #14ffe9, 0 0 150px #ffeb3b,
+        0 0 200px #ff00e0;
         animation: animated 1.5s linear infinite;
      }
     
